--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 	</properties>
 
 	<dependencies>
+	
 		<dependency>
 			<groupId>net.sf.opencsv</groupId>
 			<artifactId>opencsv</artifactId>
@@ -37,6 +38,11 @@
 			<groupId>org.telegram</groupId>
 			<artifactId>telegrambots</artifactId>
 			<version>4.1</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.omertron</groupId>
+		    <artifactId>themoviedbapi</artifactId>
+		    <version>4.0</version>
 		</dependency>
 	</dependencies>
 </project>
