--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
 	<url>http://maven.apache.org</url>
 
 	<properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+    	<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
@@ -38,5 +40,32 @@
 			<artifactId>telegrambots</artifactId>
 			<version>4.1</version>
 		</dependency>
+		<dependency>
+       		<groupId>org.slf4j</groupId>
+       		<artifactId>slf4j-api</artifactId>
+       		<version>1.7.5</version>
+   		</dependency>
+   		<dependency>
+       		<groupId>org.slf4j</groupId>
+       		<artifactId>slf4j-log4j12</artifactId>
+       		<version>1.7.5</version>
+   		</dependency>
 	</dependencies>
+	
+	<build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.0.1</version>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals><goal>copy-dependencies</goal></goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
