--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,15 @@
 		    <groupId>com.omertron</groupId>
 		    <artifactId>themoviedbapi</artifactId>
 		    <version>4.0</version>
+		    <exclusions>
+		        <groupId>com.fasterxml.jackson.core</groupId>
+		        <artifactId>jackson-core</artifactId>
+		    </exclusions>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.8.7</version>
 		</dependency>
 	</dependencies>
 </project>
