--- a/pom.xml
+++ b/pom.xml
@@ -52,8 +52,10 @@
 		    <artifactId>themoviedbapi</artifactId>
 		    <version>4.0</version>
 		    <exclusions>
-		        <groupId>com.fasterxml.jackson.core</groupId>
-		        <artifactId>jackson-core</artifactId>
+		    	<exclusion>
+		    		<groupId>com.fasterxml.jackson.core</groupId>
+		        	<artifactId>jackson-core</artifactId>
+		    	</exclusion>		        
 		    </exclusions>
 		</dependency>
 		<dependency>
